[gd_scene load_steps=4 format=3 uid="uid://ck8wmpg82pntn"]

[ext_resource type="Script" uid="uid://xxxrapfjlel7" path="res://src/scenes/2d/days/day_end_screen.gd" id="1_4hnxl"]

[sub_resource type="SystemFont" id="SystemFont_de5wr"]
font_names = PackedStringArray("Courier New")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_bauee"]
default_font = SubResource("SystemFont_de5wr")

[node name="DayEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bauee")
script = ExtResource("1_4hnxl")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day 1 Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageContainer" type="VBoxContainer" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer3" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"